Import of XSAWYERX/Net-IPAddress-Minimal-0.02 from CPAN.
gitpan-cpan-distribution: Net-IPAddress-Minimal
gitpan-cpan-version:      0.02
gitpan-cpan-path:         XSAWYERX/Net-IPAddress-Minimal-0.02.tar.gz
gitpan-cpan-author:       XSAWYERX
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Net-IPAddress-Minimal
 
+0.02    10.6.2010
+        * 100% test coverage
+        * Bug fixes for uninitialized values
+        * POD fixes and cleanups
+
 0.01    10.6.2010
         First version, Weehooo.
 
