--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Net-IPAddress-Minimal
 
+0.03    13.6.2010
+        * Adding Data::Validate and Data::Validate::IP for more accuracy
+        * Cleaning up
+
 0.02    10.6.2010
         * 100% test coverage
         * Bug fixes for uninitialized values
