--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Net-IPAddress-Minimal
 
+0.04    31.08.10
+        * Moved to Dist::Zilla!
+        * That also fixed a prereq causing tests to fail.
+        * Removed old warning.
+
 0.03    13.6.2010
         * Adding Data::Validate and Data::Validate::IP for more accuracy
         * Cleaning up
