Import of XSAWYERX/Net-IPAddress-Minimal-0.05 from CPAN.
gitpan-cpan-distribution: Net-IPAddress-Minimal
gitpan-cpan-version:      0.05
gitpan-cpan-path:         XSAWYERX/Net-IPAddress-Minimal-0.05.tar.gz
gitpan-cpan-author:       XSAWYERX
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Net-IPAddress-Minimal
 
+0.05    31.08.10
+        * Corrected the META repo by patching Dist::Zilla::Plugin::Repository.
+        * Cleaned up more POD.
+
 0.04    31.08.10
         * Moved to Dist::Zilla!
         * That also fixed a prereq causing tests to fail.
