--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     Net::IPAddress::Minimal - IP string to number and back
 
 VERSION
-    version 0.04
+    version 0.05
 
 SYNOPSIS
     This module converts IPv4 strings to integer IP numbers and vice versa.
@@ -58,40 +58,10 @@ SUBROUTINES/METHODS
     whether it's an IPv4 string, and IP number or something else (which is
     an error).
 
-AUTHORS
-    Tamir Lousky, "<tlousky at cpan.org>"
-
-    SawyerX, "<xsawyerx at cpan.org>"
-
 BUGS
-    Please report any bugs or feature requests to "bug-net-ipaddress-minimal
-    at rt.cpan.org", or through the web interface at
-    <http://rt.cpan.org/NoAuth/ReportBug.html?Queue=Net-IPAddress-Minimal>.
-    I will be notified, and then you'll automatically be notified of
-    progress on your bug as I make changes.
+    We encourage you to open bugs on the Github Issues page:
 
-SUPPORT
-    You can find documentation for this module with the perldoc command.
-
-        perldoc Net::IPAddress::Minimal
-
-    You can also look for information at:
-
-    *   RT: CPAN's request tracker
-
-        <http://rt.cpan.org/NoAuth/Bugs.html?Dist=Net-IPAddress-Minimal>
-
-    *   AnnoCPAN: Annotated CPAN documentation
-
-        <http://annocpan.org/dist/Net-IPAddress-Minimal>
-
-    *   CPAN Ratings
-
-        <http://cpanratings.perl.org/d/Net-IPAddress-Minimal>
-
-    *   Search CPAN
-
-        <http://search.cpan.org/dist/Net-IPAddress-Minimal/>
+    <http://github.com/Tlousky/net-ipaddress-minimal/issues>.
 
 AUTHORS
       Tamir Lousky <tlousky@cpan.org>
